# compute-starter-kit-cpp-empty

./: .clang-format  .gitignore  .starter-kit-id  CMakeLists.txt  CMakePresets.json  README.md  SECURITY.md  fastly.toml
src/: main.cpp
